# anton

./: .coveragerc  .env  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.scratchpad  LICENSE  Makefile  README.md  REFACTOR_PLAN_REVISION_SUMMARY.md  alembic.ini  anton_logo.txt  codexcoderef  coworkerref  datasources.md  docker-compose.yml  format_memory_access_log_tab.py  install.ps1  install.sh  openclawref  prefect.docker.yaml  prefect.yaml  pyproject.toml  pytest.ini
.github/: CODEOWNERS
.github/workflows/: auto-release.yml  dev-build-deploy.yml  docs.yml  linter.yml  prod-build-deploy.yml  release.yml  staging-build-deploy.yml  tests-integration.yml  tests-unit.yml  tests.yml  tests_e2e_release.yml
alembic/: README  env.py
alembic/versions/: 001_add_minds_table_with_uuid.py  001_initial_schema_complete.py  002_add_data_catalog_tables.py  002_expand_mind_model.py  003_add_datasource_table.py  003_add_prefect_flow_run_id.py  004_add_data_catalog_tables.py  004_drop_legacy_mind_ds_cols.py  004_rename_data_to_connection_data.py  005_add_description_to_ds.py  006_fix_min_max_val_types.py  007_change_tenant_id_to_uuid.py  008_drop_connection_data_col.py  008_drop_mind_ds_status_col.py  009_drop_connection_data_col.py  010_add_conversation_tables.py  010_fix_string_col_types.py  011_add_conversation_tables.py  012_add_unique_constraints_for_tables.py  013_fix_negative_row_counts.py  014_make_model_sel_cols_null.py  2026_02_03_1716-fix_tables_constraint.py  2026_02_05_1144-encrypt_msgs.py  2026_02_05_1643-rename_tenant_id_to_org_id.py  2026_02_05_1644-add_user_id_and_indexes.py  2026_02_10_2128-convert_sql_query_col_to_jsonb.py  2026_02_15_2356-add_is_sample_to_mind_datasource.py  2026_02_16_1200-add_chat_completions_and_usage_fields.py  2026_03_16_1200-add_shared_memory_tables.py  2026_03_17_1845-add_msg_events_table.py  2026_03_24_1057-fix_msg_events_soft_dlt.py  2026_04_22_1219-add_scratchpad_as_a_service_tables.py  2026_06_09_1500-make_conversations_mind_id_nullable.py
anton/: README.md  __about__.py  __init__.py  __main__.py  analytics.py  chat.py  chat_session.py  chat_ui.py  checks.py  cli.py  client.py  clipboard.py  connect_collector.py  diagnostics.py  explainability.py  minds.py  minds_client.py  minds_http.py  minds_query.py  onboarding.py  policies.py  prompts.py  publisher.py  scratchpad.py  scratchpad_boot.py  scratchpad_manager.py  tools.py  updater.py  workspace.py
anton-web/: requirements.txt
anton-web/api/: main.py  session_manager.py  ws_protocol.py
anton/backends/: base.py  docker.py  local.py  protocol.py
anton/channel/: __init__.py  base.py  branding.py  registry.py  terminal.py  theme.py  types.py
anton/commands/: bug_report.py  datasource.py  goal.py  headless.py  integrations.py  session.py  setup.py  share.py  skills.py  ui.py
anton/config/: settings.py
anton/core/: agent.py  estimator.py  executor.py  planner.py  runtime.py  session.py  settings.py
deployment/: eval-job.yaml
docs/: .gitignore  api.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
evals/: .gitignore  CAPABILITIES.md  README.md  __init__.py  __main__.py  conftest.py  judge.py  loader.py  models.py  report.py  runner.py  scorers.py  scoring.py  spec.py  test_evals.py  types.py
minds/: __init__.py  server.py
plan/: README.md
requirements/: requirements-dev.txt  requirements.txt
scripts/: init-dbs.sh
tests/: __init__.py  conftest.py  test_acc.py  test_access_log_integration.py  test_agent.py  test_analytics.py  test_artifacts.py  test_bug_report.py  test_cerebellum.py  test_cerebellum_e2e.py  test_channel.py  test_channel_branding.py  test_channel_registry.py  test_channel_theme.py  test_chat.py  test_chat_bugs.py  test_chat_context.py  test_chat_minds.py  test_chat_run_code.py  test_chat_scratchpad.py  test_chat_ui.py  test_checks.py  test_cli.py  test_client.py  test_clipboard.py  test_connect.py  test_connect_collector.py  test_consolidator.py  test_cortex.py  test_cortex_ranker_integration.py  test_cowork_server_package.py  test_credential_parsers.py  test_data_vault.py  test_datasource.py  test_datasource_context_identity.py  test_episodes.py  test_estimator.py  test_events.py  test_executor.py  test_explainability.py  (+52 more)
(+614 files in other folders)
