[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anton"
dynamic = ["version"]
description = "Autonomous coding copilot"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.42.0",
    "openai>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12.4",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "packaging>=21.0",
    "pyyaml>=6.0",
    "dill==0.3.8",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24",
]
clipboard = [
    "Pillow>=12.2.0",
]
cowork-server = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "slack-sdk>=3.27.0",
]

[project.scripts]
anton = "anton.cli:app"
anton-cowork-server = "anton.cowork.server.main:main"

[tool.hatch.version]
source = "regex"
path = "anton/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["anton"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
    "stub_only: test requires stub server (skipped when --live is passed)",
]
