[project]
name = "minds"
version = "1.10.0"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pydantic==2.12.5",
    "fastapi==0.133.0",
    "uvicorn==0.47.0",
    "watchfiles==1.1.0",
    "python-dotenv==1.1.0",
    "pyodbc>=4.0.39",
    "httpx==0.28.1",
    "click==8.4.0",
    "langfuse==3.14.6",
    "alembic==1.16.4",
    "sqlmodel==0.0.24",
    "SQLAlchemy==2.0.43",
    "psycopg2-binary==2.9.10",
    "sqlglot==27.2.0",
    "async-property==0.2.2",
    "pydantic-settings==2.10.1",
    "tabulate==0.9.0",
    "mind-castle==0.5.0",
    "matplotlib==3.10.8",
    "statsig-python-core==0.15.1",
    "docker==7.1.0",
]

[build-system]
requires = ["setuptools >= 80.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["minds", "minds.*"]

# Pytest
[tool.pytest.ini_options]
addopts = "-q --strict-markers --maxfail=1 --disable-warnings"
testpaths = ["tests"]
markers = ["unit: fast unit tests"]

# Ruff
[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["B008"]  # Allow Depends() calls in FastAPI function signatures

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501"]
"tests/e2e/evals/*.py" = ["E501"]
"minds/agents/database_agent/prompt_templates.py" = ["E501"]
"minds/agents/helpers/chart_generation_instructions.py" = ["E501"]
"minds/agents/candidate_sql_agent/**/instruction*.py" = ["E501"]
"minds/agents/anton_agent/anton/prompts.py" = ["E501"]
[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff]
line-length = 120
